--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
-    "next": "15.4.1",
+    "next": "^16.1.4",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5"
